--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -31,8 +31,8 @@
   @include ombrage-medium;
 }
 
-//bouton coeur
-.restaurant__rate {
+//bouton coeur VERSION INITIALE SPAN
+/* .restaurant__rate {
   display: flex;
   position: relative;
   right: 2em;
@@ -72,9 +72,9 @@
       background-clip: text;
     }
   }
-}
+} */
 
-//bouton coeur
+//bouton coeur VERSION OK BUTTONS
 .restaurant__rate2 {
   display: flex;
   position: absolute;
@@ -89,7 +89,7 @@
   z-index: 2;
 
   .fa-heart {
-    font-size: 2.5em;
+    font-size: 2.3em;
   }
 
   .fa-regular {
