--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -28,7 +28,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
 
     h1 {
@@ -41,11 +41,14 @@
 
     .restaurant__rate2 {
       position: relative;
+      padding-left: 30px;
       right: 0;
       bottom: 0;
+        .fa-regular {
+          background-color: $light-grey;
       }
     }
-  
+  }
 
   .navigation {
     display: none;
@@ -54,68 +57,6 @@
   .menu__container {
     @include boxbasic;
     @include column;
-
-    .recipes:first-child {
-      animation: slider_menu 0.5s forwards;
-      /*       .recipes__choice:first-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 0.3s forwards;
-      }
-      .recipes__choice:nth-child(1) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 0.6s forwards;
-      }
-      .recipes__choice:nth-child(2) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 0.9s forwards;
-      }
-      .recipes__choice:last-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 1.2s forwards;
-      } */
-    }
-
-    .recipes:nth-child(2) {
-      opacity: 0;
-      animation: slider_menu 0.5s 0.5s forwards;
-      /*       .recipes__choice:first-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 1.5s forwards;
-      }
-      .recipes__choice:nth-child(1) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 1.8s forwards;
-      }
-      .recipes__choice:nth-child(2) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 2.1s forwards;
-      }
-      .recipes__choice:last-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 2.4s forwards;
-      } */
-    }
-
-    .recipes:last-child {
-      opacity: 0;
-      animation: slider_menu 0.5s 1s forwards;
-      /*       .recipes__choice:first-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 2.7s forwards;
-      }
-      .recipes__choice:nth-child(1) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 3s forwards;
-      }
-      .recipes__choice:nth-child(2) {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 3.3s forwards;
-      }
-      .recipes__choice:last-child {
-        opacity: 0;
-        animation: appear_elementsmenu 0.3s 3.6s forwards;
-      } */
-    }
   }
 
   .recipes {
@@ -155,6 +96,7 @@
     padding-right: 15%;
     margin: 0;
   }
+    //  ***   FIN MEDIA QUERIES DESKTOP    ***   FIN MEDIA QUERIES DESKTOP  ***
 
   //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
   @media (min-width: 768px) and (max-width: 1024px) {
@@ -170,11 +112,11 @@
       gap: 2%;
       font-size: 0.9em;
     }
-
   }
+  
+    //  ***   FIN MEDIA QUERIES TABLETTE    ***   FIN MEDIA QUERIES TABLETTE  ***}
+
 }
-
-
 
 .recipes__choice {
   @include boxbasic;
@@ -183,9 +125,9 @@
   height: 70px;
   overflow: hidden;
   transition: all ease-in-out 0.3s;
+  opacity: 0;
+  
 
-
-    animation: appear_elementsmenu 1s 0.3s forwards;
   
 
 
@@ -245,7 +187,4 @@
     @include ombrage-dark;
     transition: ease-in-out 0.3s;
   }
-}
-.recipes__choice:first-child {
-    animation: appear_elementsmenu 10s forwards;
 }
