--- a/sass/index.css
+++ b/sass/index.css
@@ -176,7 +176,7 @@
     opacity: 1;
   }
   98% {
-    transform: scale3d(2);
+    transform: scale(2);
   }
   100% {
     opacity: 0;
@@ -380,10 +380,15 @@ section {
   gap: 18px;
 }
 
-h1 {
+h1 h2 {
   font-size: 1.4em;
   font-weight: 700;
   margin: 20px;
+}
+
+h2 {
+  text-align: left;
+  padding: 10px;
 }
 
 p {
@@ -410,7 +415,7 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 50px;
   }
 }
